change name from crudapp to monolith

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to CrudApp</title>
+    <title>Welcome to monolith</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,11 +38,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to CrudApp</h1>
+        <h1>Welcome to monolith</h1>
         <p>Your application is now running.</p>
         <p>Start building something amazing!</p>
         <div class="footer">
-            <p>&copy; 2023 CrudApp. All rights reserved.</p>
+            <p>&copy; 2023 monolith. All rights reserved.</p>
         </div>
     </div>
 </body>
