--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #4CAF50;
+            color: #00ADD8;
         }
         p {
             font-size: 1.2rem;
