--- a/guides/getting_started.html
+++ b/guides/getting_started.html
@@ -71,7 +71,7 @@
             <h2 id="introduction"><a class="anchorlink" href="#introduction" data-turbo="false"><span>1.</span> Introduction</a></h2>
             <p>Welcome to Monolith! This guide walks you through the complete process of creating and deploying a simple blog application. Basic knowledge of Go is recommended but not required.</p>
             <h2 id="monolith-philosophy"><a class="anchorlink" href="#monolith-philosophy" data-turbo="false"><span>2.</span> Monolith Philosophy</a></h2>
-            <p>Monolith favors convention over configuration and keeps dependencies to a minimum. Applications are structured around the MVC pattern, using GORM for persistence and the Go standard library whenever possible.</p>
+            <p>Monolith applications are structured around the MVC pattern, using GORM for persistence and the Go standard library whenever possible.</p>
             <h2 id="creating-a-new-monolith-app"><a class="anchorlink" href="#creating-a-new-monolith-app" data-turbo="false"><span>3.</span> Creating a New Monolith App</a></h2>
             <h3 id="prerequisites"><a class="anchorlink" href="#prerequisites" data-turbo="false"><span>3.1.</span> Prerequisites</a></h3>
             <p>You'll need Go 1.21 or newer, <code>make</code>, and <code>git</code>. Optional tools like <a href="https://github.com/cosmtrek/air">air</a> enable hot reloading.</p>
