Fix documentation paths after moving code to app directory

--- a/guides/config.html
+++ b/guides/config.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>The <code>config/</code> directory defines compile-time constants that are imported across the project. Settings such as <code>JOB_QUEUE_NUM_WORKERS</code> live here. Anything dynamic, like the port or database DSN, is read from environment variables in <code>main.go</code> or the relevant package.</p>
+        <p>The <code>app/config/</code> directory defines compile-time constants that are imported across the project. Settings such as <code>JOB_QUEUE_NUM_WORKERS</code> live here. Anything dynamic, like the port or database DSN, is read from environment variables in <code>main.go</code> or the relevant package.</p>
       </div>
     </article>
   </main>
