--- a/guides/controllers.html
+++ b/guides/controllers.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>Handlers in <code>controllers/</code> receive incoming requests. Each controller is a Go type with methods for its actions. Routes defined in <code>routes/routes.go</code> connect URLs to these methods. Controllers fetch data from models and pass it to templates in the <code>views</code> directory for rendering.</p>
+        <p>Handlers in <code>app/controllers/</code> receive incoming requests. Each controller is a Go type with methods for its actions. Routes defined in <code>app/routes/routes.go</code> connect URLs to these methods. Controllers fetch data from models and pass it to templates in the <code>app/views</code> directory for rendering.</p>
       </div>
     </article>
   </main>
