--- a/guides/csrf.html
+++ b/guides/csrf.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>The <code>csrf/</code> package provides helpers to embed a token in HTML forms or expose it via meta tags for JavaScript. <code>middleware/CSRFMiddleware</code> verifies the token on mutating requests and returns <code>403 Forbidden</code> when it is missing or invalid.</p>
+        <p>The <code>app/csrf/</code> package provides helpers to embed a token in HTML forms or expose it via meta tags for JavaScript. <code>app/middleware/CSRFMiddleware</code> verifies the token on mutating requests and returns <code>403 Forbidden</code> when it is missing or invalid.</p>
       </div>
     </article>
   </main>
