--- a/guides/jobs.html
+++ b/guides/jobs.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>The <code>jobs/</code> package implements a lightweight in-process queue backed by the <code>jobs</code> table. Workers run jobs in FIFO order and retry with backoff on failure. Use <code>jobs.Enqueue</code> to add work or <code>jobs.AddRecurringJob</code> for scheduled tasks.</p>
+        <p>The <code>app/jobs/</code> package implements a lightweight in-process queue backed by the <code>jobs</code> table. Workers run jobs in FIFO order and retry with backoff on failure. Use <code>jobs.Enqueue</code> to add work or <code>jobs.AddRecurringJob</code> for scheduled tasks.</p>
       </div>
     </article>
   </main>
