--- a/guides/middleware.html
+++ b/guides/middleware.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>The <code>middleware/</code> directory contains helpers that wrap the router. Logging, session authentication and CSRF verification are implemented as middleware. Compose them to build the request chain.</p>
+        <p>The <code>app/middleware/</code> directory contains helpers that wrap the router. Logging, session authentication and CSRF verification are implemented as middleware. Compose them to build the request chain.</p>
       </div>
     </article>
   </main>
