--- a/guides/models.html
+++ b/guides/models.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>Structs in <code>models/</code> map to database tables using GORM. Each model embeds timestamps so you automatically get <code>CreatedAt</code> and <code>UpdatedAt</code>. Typical models include <code>User</code>, <code>Job</code> and <code>Message</code>.</p>
+        <p>Structs in <code>app/models/</code> map to database tables using GORM. Each model embeds timestamps so you automatically get <code>CreatedAt</code> and <code>UpdatedAt</code>. Typical models include <code>User</code>, <code>Job</code> and <code>Message</code>.</p>
       </div>
     </article>
   </main>
