--- a/guides/routes.html
+++ b/guides/routes.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>Routing is configured in <code>routes/routes.go</code> using Go's standard <code>ServeMux</code>. Each path maps to a controller action and middleware wraps the mux to provide logging, sessions and CSRF protection.</p>
+        <p>Routing is configured in <code>app/routes/routes.go</code> using Go's standard <code>ServeMux</code>. Each path maps to a controller action and middleware wraps the mux to provide logging, sessions and CSRF protection.</p>
       </div>
     </article>
   </main>
