--- a/guides/session.html
+++ b/guides/session.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>The <code>session/</code> package manages cookie-based sessions through Gorilla SecureCookie. Helpers like <code>SetLoggedIn</code>, <code>Logout</code> and <code>IsLoggedIn</code> simplify authentication. Use the <code>RequireLogin</code> middleware to redirect anonymous users to <code>/login</code>.</p>
+        <p>The <code>app/session/</code> package manages cookie-based sessions through Gorilla SecureCookie. Helpers like <code>SetLoggedIn</code>, <code>Logout</code> and <code>IsLoggedIn</code> simplify authentication. Use the <code>RequireLogin</code> middleware to redirect anonymous users to <code>/login</code>.</p>
       </div>
     </article>
   </main>
