--- a/guides/views.html
+++ b/guides/views.html
@@ -25,7 +25,7 @@
         </div>
       </header>
       <div id="article-body" class="wrapper">
-        <p>Templates in the <code>views/</code> directory are parsed once during startup. Controllers execute these templates with data to generate HTML responses. Layouts help keep common markup in one place.</p>
+        <p>Templates in the <code>app/views/</code> directory are parsed once during startup. Controllers execute these templates with data to generate HTML responses. Layouts help keep common markup in one place.</p>
       </div>
     </article>
   </main>
